Support to be used via command-line, as a global module

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "convert-excel-to-json",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Convert Excel to JSON",
   "homepage": "https://github.com/DiegoZoracKy/convert-excel-to-json/",
   "main": "./lib/convert-excel-to-json.js",
-  "bin": "./app.js",
+  "bin": "./bin/cli.js",
   "author": {
     "name": "Diego ZoracKy",
     "email": "diego.zoracky@gmail.com",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "argparse": "^1.0.2",
+    "magic-bins": "^0.3.0",
     "node.extend": "^1.1.5",
     "xlsx": "^0.8.0"
   },
